--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -13,6 +13,12 @@ jobs:
       - name: Show node version
         run: echo node -v
 
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2.4.0
+        with:
+          version: 8
+          run_install: false
+
       - name: Install dependencies
         run: npm install
 
