--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -8,17 +8,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Show node version
-        run: echo node -v
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: ${{ runner.os }}-pnpm-store-
 
 
       - name: Install dependencies
-        run: bun install
+        run: pnpm install
 
       - name: Build the app
-        run: bun run build
+        run: pnpm run build
+
+      - name: Test the connection
+        run: |
+          pnpm run preview &  
+          sleep 5
+          curl -I http://localhost:4173
