.fix nouveau test pnpm

--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -4,10 +4,21 @@ on:
   push:
 
 jobs:
-  hello-world:
+  build:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v4
+
+      - name: Show node version
+        run: echo node -v
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2.4.0
+        with:
+          version: 8
+          run_install: false
+
       - name: Get pnpm store directory
         shell: bash
         run: |
@@ -18,8 +29,8 @@ jobs:
         with:
           path: ${{ env.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-pnpm-store-
-
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
         run: pnpm install
@@ -29,6 +40,6 @@ jobs:
 
       - name: Test the connection
         run: |
-          pnpm run preview &  
+          pnpm run preview &
           sleep 5
-          curl -I http://localhost:4173
+          curl -I http://localhost:4173{
