--- a/.github/workflows/intro.yml
+++ b/.github/workflows/intro.yml
@@ -42,4 +42,4 @@ jobs:
         run: |
           pnpm run preview &
           sleep 5
-          curl -I http://localhost:4173{
+          curl -I http://localhost:4173
